--- a/tables/tableJPFBuilders_short.tex
+++ b/tables/tableJPFBuilders_short.tex
@@ -72,5 +72,5 @@ Class & Method & Scope &
 
 \end{tabular}%
 \caption{Estados y tiempo explorados por JPF en los tres \emph{scopes} inmediatamente anteriores al primer \emph{timeout} (o los tres mayores si no hay TO).}
-\label{tab:results-jpf1-trim}
+\label{tab:results-jpf1-short}
 \end{table}
