--- a/tables/eficienciaBuilders.tex
+++ b/tables/eficienciaBuilders.tex
@@ -6,7 +6,7 @@
 \hline
 \multicolumn{2}{c}{\textbf{Casos}} & \multicolumn{2}{c}{\textbf{GA}} & \multicolumn{2}{c}{\textbf{HC}} \\
 \cline{3-6}
-\multicolumn{2}{c}{} & \textbf{\tiny GE} & \textbf{\tiny RC} & \textbf{\tiny GE} & \textbf{\tiny RC} \\
+\multicolumn{2}{c}{} & \textbf{\tiny FE} & \textbf{\tiny FC} & \textbf{\tiny FE} & \textbf{\tiny FC} \\
 \hline
 \multicolumn{2}{c}{\textbf{NCL}}            & 292   & 3622 & 40   & 645  \\
 \multicolumn{2}{c}{\tiny \#API: 34, \#MétodosGen: 3} & & & & \\
